// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App snapshots 1`] = `
<div
  className="page"
>
  <div
    className="interactions"
  >
    <form
      onSubmit={[Function]}
    >
      <input
        onChange={[Function]}
        type="text"
        value="react"
      />
      <button
        type="submit"
      >
        Search
      </button>
    </form>
  </div>
  <div
    className="table"
  />
  <div
    className="interactions"
  >
    <div>
      <button
        onClick={[Function]}
        type="button"
      >
        more
      </button>
    </div>
  </div>
</div>
`;

exports[`Button snapshots 1`] = `
<div>
  <button
    type="button"
  >
    Give Me More
  </button>
</div>
`;

exports[`Search snapshots 1`] = `
<form>
  <input
    type="text"
  />
  <button
    type="submit"
  >
    Search
  </button>
</form>
`;

exports[`Table snapshots 1`] = `
<div
  className="table"
>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        1
      </a>
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }
    />
    <span
      style={
        Object {
          "width": "65%",
        }
      }
    >
      1
    </span>
    <span
      style={
        Object {
          "width": "25%",
        }
      }
    >
      <div>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Remove
        </button>
      </div>
    </span>
  </div>
  <div
    className="table-row"
  >
    <span
      style={
        Object {
          "width": "40%",
        }
      }
    >
      <a>
        2
      </a>
    </span>
    <span
      style={
        Object {
          "width": "15%",
        }
      }
    />
    <span
      style={
        Object {
          "width": "65%",
        }
      }
    >
      2
    </span>
    <span
      style={
        Object {
          "width": "25%",
        }
      }
    >
      <div>
        <button
          className="button-inline"
          onClick={[Function]}
          type="button"
        >
          Remove
        </button>
      </div>
    </span>
  </div>
</div>
`;
